# producer_consumer_problem_using_circular_buffer

./: CMakeLists.txt  README.md  producer_consumer_problem_using_circular_buffer.c
lib/: queue.h  queue_using_array.c  queue_using_linked_list.c  sensor.c  sensor.h
